--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         an article from Duckbill Group founder Corey Quinn,
                         Corey lists three razor-sharp insights into why cloud
                         vendors have you locked in even more tightly than it
-                        might seem at first glance:
+                        might seem:
                     </p>
                     <p></p>
                     <ul>
@@ -294,45 +294,66 @@
                             <strong>
                                 A system for auditing and tracking shadow IT.
                             </strong>
-                            Visibility into Shadow IT is difficult.
+                            Visibility into Shadow IT is difficult. But the
+                            chain is a strong ledger with a perfect history of
+                            everything that's happened.
                         </li>
                     </ul>
 
                     <p>
-                        Another that we ran into was identity — if you are going
-                        to connect and share computers, you need some way to
-                        kickstart recognizing and delegating authority.
-                        Likewise, connecting otherwise disparate environments
-                        and sharing specifications for running your apps was
-                        impossible without a centralized service. We think web3
-                        can roll the ball forward on these issues. Things like
-                        identity, auditability, and payments are built right in
-                        and cryptographically verified. Likewise, a blockchain
-                        is a shared data store in the sky. Access to this data
-                        store can enable computers to discover each other and
-                        share information without having to trust a centralized
-                        party like a PaaS or IaaS.
+                        So we invented a new solution for connecting computers
+                        together and running workloads —
+                        <a href="https://daonetes.com">DAOnetes</a>. It will
+                        enable you to plug in and out of arbitrary clusters by
+                        leveraging the consistency that containers offer,
+                        alongside the ability of the blockchain to trustlessly
+                        transact, port identity, and form groups for delegation
+                        of responsibility. You will be able to bring your own
+                        cloud. Eventually, operations experts will bring theirs,
+                        and sell services for you to use, just like AWS does,
+                        but operated transparently.
                     </p>
 
                     <p>
-                        It will enable you to plug in and out of arbitrary
-                        clusters by leveraging the consistency that containers
-                        offer, alongside the ability of the blockchain to
-                        trustlessly transact, port identity, and form groups for
-                        delegation of responsibility. You will be able to bring
-                        your own cloud. Eventually, operations experts will
-                        bring theirs, and sell services for you to use, just
-                        like AWS does, but operated transparently.
+                        Why the
+                        <a
+                            href="https://en.wikipedia.org/wiki/Decentralized_autonomous_organization"
+                            >"DAO"</a
+                        >? Because one cryptographic signature is far from
+                        enough. Multiple signers in a shared system of identity
+                        makes it possible to verify that multiple people have
+                        signed off on which devices are approved to be a part of
+                        running workloads, which types of workloads are allowed
+                        to be run, and which workloads are currently running.
+                        Whether it's in a private chain or public, an elliptic
+                        curve is the same everywhere.
+                    </p>
+
+                    <p>
+                        Not only will you be able to use the same system of
+                        identity to sign a Docker image as you will to deploy
+                        it, you will be able to connect to other users who
+                        signed as part of these decisions alongside you.
                     </p>
 
                     <h5>Why DAOnetes Will Drive This Change</h5>
-
-                    Why us? Because we are experts in developer experience and
-                    making technology accessible, which will be critical to
-                    bootstrap the network. And we have a fire burning in our
-                    bellies to bring this vision to the world. This is the
-                    system that we want, and we saw no other way to build it
-                    than to start this company.
+                    <p>
+                        But if even if those theses are true, why us? Why
+                        DAOnetes?
+                    </p>
+                    <p>
+                        What we bring to the table is expertise in developer
+                        experience and making technology accessible, and a fire
+                        burning to bring this vision to life. We are deploying
+                        the program on the
+                        <a href="https://solana.com/">Solana</a> chain due to
+                        its high performance, low fees, and strong vision. The
+                        DAOnetes architecture is below and we welcome feedback
+                        on the dapp
+                        <a href="https://daonetes.com" target="_blank"
+                            >devnet deployment</a
+                        >.
+                    </p>
 
                     <div class="d-flex justify-content-center">
                         <img
@@ -342,7 +363,24 @@
                         />
                     </div>
 
+                    <p>
+                        In a nutshell, devices (runtime environments) are joined
+                        to a "work group" which has a central authority that
+                        could be an individual user key or a DAO. This central
+                        authority is responsible for operations such as adding
+                        workload specifications (Docker Compose files) to the
+                        group, approving devices to be a part of the group, and
+                        scheduling workloads onto specific devices.
+                    </p>
+
                     <h4>Try It</h4>
+
+                    Please
+                    <a href="https://twitter.com/cryptoworkbench" about="_blank"
+                        >request some license tokens from us</a
+                    >
+                    to try the <a href="https://daonetes.com/">demo</a> and give
+                    us feedback. Thank you.
                 </div>
                 <div class="col-lg"></div>
             </div>
