Change to working website for now :3

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         Nathan LeClaire and Sven Dowideit founded Crypto
                         Workbench in 2022 to build an ad-hoc distributed
                         computing solution —
-                        <a target="_blank" href="https://daonetes.com"
+                        <a target="_blank" href="https://daonetes.org"
                             >DAOnetes</a
                         >. We met working at Docker in 2014 and bonded over our
                         passion for unlocking computing’s “bicycle for the
@@ -303,7 +303,7 @@
                     <p>
                         So we invented a new solution for connecting computers
                         together and running workloads —
-                        <a href="https://daonetes.com">DAOnetes</a>. It will
+                        <a href="https://daonetes.org">DAOnetes</a>. It will
                         enable you to plug in and out of arbitrary clusters by
                         leveraging the consistency that containers offer,
                         alongside the ability of the blockchain to trustlessly
@@ -350,7 +350,7 @@
                         its high performance, low fees, and strong vision. The
                         DAOnetes architecture is below and we welcome feedback
                         on the dapp
-                        <a href="https://daonetes.com" target="_blank"
+                        <a href="https://daonetes.org" target="_blank"
                             >devnet deployment</a
                         >.
                     </p>
@@ -379,7 +379,7 @@
                     <a href="https://twitter.com/cryptoworkbench" about="_blank"
                         >request some license tokens from us</a
                     >
-                    to try the <a href="https://daonetes.com/">demo</a> and give
+                    to try the <a href="https://daonetes.org/">demo</a> and give
                     us feedback. Thank you.
                 </div>
                 <div class="col-lg"></div>
