Couple grammar changes
Signed-off-by: Nathan LeClaire <nathan.leclaire@gmail.com>

--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
                         have tons of leverage against their customers. By its
                         nature, this situation will continue to foment impulses
                         towards open systems as vendors are tempted to take
-                        advantage of this position, or even compete compete with
-                        their customers. Part and parcel with this impulse will
-                        be a desire to migrate to
+                        advantage of this position, or even simply because they
+                        are competing with their customers in other areas. Part
+                        and parcel with this impulse will be a desire to migrate
+                        to
                         <i>fungible workloads</i> where the implementation
                         details of where you are running something are fully
                         abstracted away.
@@ -137,7 +138,7 @@
                         Docker was one expression of this. As a "cloud
                         Switzerland", its promise of portable workloads was a
                         great step towards decoupling <i>what we do</i> from
-                        <i> where we do it </i>. The popularity of
+                        <i> where we do it</i>. The popularity of
                         <a
                             target="_blank"
                             href="https://en.wikipedia.org/wiki/Serverless_computing"
@@ -185,7 +186,7 @@
                                 >Data tends to stay where it originated.</strong
                             >
                             Costs to move data are too painful once you have
-                            generated a lot of it within one particular cloud.
+                            generated a lot of it within one cloud.
                         </li>
                     </ul>
                     <p>
@@ -205,10 +206,11 @@
                         is yet another inevitable trend in our evolving world as
                         we plug in countless devices and connect them to the
                         Internet. Not only does each generate massive volumes of
-                        data, many of them cannot be utilitized to their full
-                        potential because they cannot connect and interoperate.
-                        Even transporting all the data we'd like to has become a
-                        pain. We are so constrained by bandwidth that
+                        data, but many of them cannot be utilitized to their
+                        full potential because they cannot connect and
+                        interoperate. Even transporting all the data we'd like
+                        to has become a pain. We are so constrained by bandwidth
+                        that
                         <a
                             target="_blank"
                             href="https://aws.amazon.com/snowball/"
@@ -261,7 +263,7 @@
                         my peers [who were] running about 14 agents on their
                         laptops. It's out of hand, whereas you can make one API
                         call to see all of your functions ... The visibility is
-                        better, the auditability is better and the control is
+                        better, the auditability is better, and the control is
                         better.
                     </blockquote>
                     <p>So how will we get there?</p>
@@ -348,7 +350,7 @@
                         the program on the
                         <a href="https://solana.com/">Solana</a> chain due to
                         its high performance, low fees, and strong vision. The
-                        DAOnetes architecture is below and we welcome feedback
+                        DAOnetes architecture is below, and we welcome feedback
                         on the dapp
                         <a href="https://daonetes.org" target="_blank"
                             >devnet deployment</a
