Add try DAOnetes

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                         ></iframe>
                     </div>
                     <div class="row text-center">
+                        <a target="_blank" href="https://daonetes.com">
+                            <h5>Try DAOnetes</h5>
+                        </a>
                         <a
                             target="_blank"
                             href="https://cryptoworkbenchpublic.s3.us-west-1.amazonaws.com/Whitepaper.pdf"
